# shader-viewer-4

./: .gitignore  CMakeLists.txt  README.md  app.cpp  camera.cpp  camera.hpp  context.cpp  example.glsl  fragment.glsl  kaleidoscopic-ifs.glsl  log.hpp  main.cpp  mandelbox.glsl  planegeometry.cpp  program.cpp  renderable.hpp  sandbox.cpp  sandbox.hpp  sandboxmaterial.cpp  sandboxmaterial.hpp  shader.cpp  shader.hpp  vcpkg-configuration.json  vcpkg.json  vcpkg_dependencies.cmake  vcpkg_setup_toolchain.cmake  window.cpp  window.hpp
src/: app.cpp  app.hpp  appcamera.cpp  appcamera.hpp  attributelocations.hpp  axis.cpp  axis.frag.glsl  axis.hpp  axis.vert.glsl  axisfrag.h  axisgeometry.cpp  axisgeometry.hpp  axismaterial.cpp  axismaterial.hpp  axisshaders.h  axisvert.h  camera.cpp  camera.hpp  cameraui.cpp  cameraui.hpp  context.cpp  context.hpp  geometry.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  material.hpp  node.hpp  planegeometry.cpp  planegeometry.hpp  program.cpp  program.hpp  renderable.hpp  renderer.cpp  renderer.hpp  sandbox.cpp  sandbox.hpp  sandboxmaterial.cpp  sandboxmaterial.hpp  shader.cpp  (+10 more)
